nettigritty.com (archived on 2010-09-08)
{
  "alexa_rank": 84723,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 1591,
  "classifier_probability": 0.79,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.05,
  "homepage_snapshot_redirected_domain": "nettigritty.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101023150929id_/http://www.nettigritty.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101023150929id_/http%3A//nettigritty.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "nettigritty.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100908095515id_/http%3A//www.nettigritty.com/privacy.php",
  "policy_title": "Privacy Policy | nettigritty.com Web Hosting Bangalore (Bengaluru), India",
  "policy_url": "nettigritty.com/privacy.php",
  "sha1": "3131129cf1d84de1e024a80c45b057bbfcb9c837",
  "simhash": 4621061843478471800,
  "simhash_updated": false,
  "site_hostname": "nettigritty.com",
  "site_url": "http://nettigritty.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100908095515",
  "word_count": 239,
  "year": 2010
}

--- a/n/ne/net/nettigritty.com.html
+++ b/n/ne/net/nettigritty.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nettigritty.com privacy policy that was archived on 2010-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100611080032id_/http%3A//www.nettigritty.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nettigritty.com privacy policy that was archived on 2010-09-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100908095515id_/http%3A//www.nettigritty.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy | nettigritty.com Web Hosting Bangalore (Bengaluru), India</title>
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <meta name="Description" content="Web Hosting, Linux Hosting, Windows Hosting, Web Host India, Domain Name, Domain Registration, Ecommerce Solutions, Search Engine Optimization - SEO, Online Shopping Cart Solutions, Web Design and other Web Services. Web Host Bangalore (Bengaluru), Mumbai, Delhi, Calcutta, Chennai, Hyderabad India USA, UK, Canada, Australia"> <meta name="Keywords" content="Web Hosting India, Linux Hosting, Reseller Hosting, Windows Hosting, Web Host India, Domain Name, Domain Registration, Ecommerce Solutions, Search Engine Optimization - SEO, Online Shopping Cart Solutions, Web Design and other Web Services. Web Host Bangalore (Bengaluru), Mumbai, Delhi, Calcutta, Chennai, Hyderabad India USA, UK, Canada"> <meta content="India" name="Country"> <meta content="1 day" name="revisit-after"> <meta content="index, follow, all" name="robots"> <meta name="DC.Title" content="Web Hosting India : Linux, Reseller, Windows | Domain Registration | nettigritty.com Bangalore (Bengaluru) India"> <meta name="DC.Description" content="Web Hosting, Linux Hosting, Windows Hosting, Web Host India, Domain Name, Domain Registration, Ecommerce Solutions, Search Engine Optimization - SEO, Online Shopping Cart Solutions, Web Design and other Web Services. Web Host Bangalore (Bengaluru), Mumbai, Delhi, Calcutta, Chennai, Hyderabad India USA, UK, Canada, Australia"> <meta name="DC.Subject" content="Web Hosting India, Linux Hosting, Windows Hosting, Web Host India, Domain Name, Domain Registration, Ecommerce Solutions, Search Engine Optimization - SEO, Online Shopping Cart Solutions, Web Design and other Web Services. Web Host Bangalore (Bengaluru), Mumbai, Delhi, Calcutta, Chennai, Hyderabad India USA, UK, Canada, Australia"> <meta name="DC.Language" content="English"> <!-- Web Hosting India, Linux Hosting, Windows Hosting, Web Host India, Domain Name, Domain Registration, Ecommerce Hosting Solutions, Search Engine Optimization - SEO, Online Shopping Cart Solutions, Web Design and other Web Services. Web Hosting Bangalore (Bengaluru), Mumbai, Delhi, Calcutta, Chennai, Hyderabad India USA, UK, Canada, Australia --><style fprolloverstyle="">A:hover {color: #336699}
 </style>
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="JavaScript">
+<script language="JavaScript">
 <!-- Begin
 function popUp(URL) {
 day = new Date();
@@ -42,7 +42,7 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
       <area alt="24/7 Support Desk" coords="875, 30, 952, 84" shape="rect" href="http://support.nettigritty.com"> 
       <area href="http://www.nettigritty.com/" shape="rect" coords="36, 8, 338, 96" alt="Home: nettigritty.com Web Hosting India" title="Home: nettigritty.com Web Hosting India"> 
       </map> 
-      <img border="0" src="http://www.nettigritty.com/images/header.200907.png" usemap="#FPMap0" alt="Web Hosting India"></td> 
+      <img border="0" src="http://www.nettigritty.com/images/header.201006.png" usemap="#FPMap0" alt="Web Hosting India"></td> 
 </tr>
 <tr>
 <td background="https://secure.nettigritty.com/~nettig26/chrometheme/chromebg.gif">
@@ -68,13 +68,14 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
 <a href="http://www.nettigritty.com/email.php">eProMail for Business</a>
 <a href="http://www.nettigritty.com/hostedexchange.php">eProMail Hosted Exchange</a>
 <a href="http://www.nettigritty.com/linuxwebhosting.php">Mail on Linux (unlimited IDs)</a>
-<a target="_blank" href="http://domains.nettigritty.com/content.php?action=free_services">Free 1GB Email Address</a>
+<a target="_blank" href="http://domains.nettigritty.com/content.php?action=free_services">Free 2GB Email Address</a>
 </div>
 
 <div id="hosting" class="dropmenudiv">
 <a href="http://www.nettigritty.com/linuxwebhosting.php">Linux Hosting</a>
 <a href="http://www.nettigritty.com/windows2003hosting.php">Windows Hosting</a>
 <a href="http://www.nettigritty.com/virtualprivateserver.php">Virtual Private Servers</a>
+<a href="http://www.nettigritty.com/ftprsyncbackup.php">Online Backup</a>
 </div>
 
 <div id="dedicated" class="dropmenudiv">
@@ -192,7 +193,7 @@ Details</a></b></font></p>
       <font color="#CCCCCC" style="font-size: 9pt">Mail on Linux<br>
       </font>
 </a><a target="_blank" href="http://domains.nettigritty.com/content.php?action=free_services" style="text-decoration: none">
-      <font color="#CCCCCC" style="font-size: 9pt">Free 1GB Email Address</font></a><font color="#CCCCCC" style="font-size: 9pt">
+      <font color="#CCCCCC" style="font-size: 9pt">Free 2GB Email Address</font></a><font color="#CCCCCC" style="font-size: 9pt">
       </font></font></font></td>
       <td width="12%" valign="top"><font face="Trebuchet MS">
       <font color="#FFFFFF" style="font-size: 10pt"><b>Hosting</b></font><font style="font-size: 9pt"><font color="#CCCCCC"><br>
@@ -204,9 +205,11 @@ Details</a></b></font></p>
       <font color="#CCCCCC">Windows Hosting</font></a><font color="#CCCCCC">
       <br>
       </font>
-      </font> 
 <a href="http://www.nettigritty.com/virtualprivateserver.php" style="text-decoration: none">
-      <font color="#CCCCCC" style="font-size: 9pt">Virtual Private Servers</font></a></font></td>
+      <font color="#CCCCCC" style="font-size: 9pt">Virtual Private Servers</font></a></font><br>
+<a href="http://www.nettigritty.com/ftprsyncbackup.php" style="text-decoration: none">
+      <font color="#CCCCCC" style="font-size: 9pt">Online Backup</font></a></font>
+</td>
       <td width="13%" valign="top"><font face="Trebuchet MS">
       <font color="#FFFFFF" style="font-size: 10pt"><b>Dedicated</b></font><font style="font-size: 9pt"><font color="#CCCCCC"><br>
       </font>
@@ -254,19 +257,6 @@ Details</a></b></font></p>
   </tbody></table>
   </center>
 <br>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-16671281-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 
 
 </body></html>
