impactmedialtd.co.uk (archived on 2010-09-10)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business",
  "char_count": 936,
  "classifier_probability": 0.79,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.59,
  "homepage_snapshot_redirected_domain": "impactmedia.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100901002442id_/http://www.impactmedia.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100831140516id_/http%3A//impactmedialtd.co.uk",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "impactmedia.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100910060937id_/http%3A//www.impactmedia.co.uk/privacy-policy.htm",
  "policy_title": "Impact Media Privacy Policy",
  "policy_url": "impactmedia.co.uk/privacy-policy.htm",
  "sha1": "6274e9000b4209154d64b1043079b50f9c3d5d3f",
  "simhash": 539794382049012307,
  "simhash_updated": true,
  "site_hostname": "impactmedialtd.co.uk",
  "site_url": "http://impactmedialtd.co.uk",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20100910060937",
  "word_count": 140,
  "year": 2010
}

--- a/i/im/imp/impactmedialtd.co.uk.html
+++ b/i/im/imp/impactmedialtd.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the impactmedialtd.co.uk privacy policy that was archived on 2010-03-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100307024109id_/http%3A//www.impactmedialtd.co.uk/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the impactmedialtd.co.uk privacy policy that was archived on 2010-09-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100910060937id_/http%3A//www.impactmedia.co.uk/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Impact Media Privacy Policy</title>
@@ -13,6 +13,7 @@
 <meta name="ICBM" content="50.873036, -1.267022">
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="http://assets.percentmobile.com/percent_mobile.js" type="text/javascript" charset="utf-8"></script>	
 <!--[if IE 7]>
 		<link rel="stylesheet" type="text/css" media="screen" href="css/ie7.css" />    
 	<![endif]-->
@@ -23,21 +24,28 @@
 <body>
 
 <!-- Calltracker start -->
-<script type="text/javascript" src="http://services.call-tracking.co.uk:8180/WebServices/gwt-www/uk.co.call_tracking.gwt.widgets.ChangeNumberWidget/uk.co.call_tracking.gwt.widgets.ChangeNumberWidget.nocache.js"></script>
+<script type="text/javascript" src="http://services.call-tracking.co.uk/WebServices/gwt-www/uk.co.call_tracking.gwt.widgets.ChangeNumberWidget/uk.co.call_tracking.gwt.widgets.ChangeNumberWidget.nocache.js"></script><script>
+<!--
+percent_mobile_track('296165023507603216755126658307511584212');
+-->
+</script>
+<noscript>
+<img src="http://tracking.percentmobile.com/pixel/296165023507603216755126658307511584212/pixel.gif?v=271009_js" width="2" height="2" alt="" />
+</noscript>
 <div id="numberRender.param" style="display:none;">clientid:245;format:434;cookieExpiry:365;groupId:179</div>
 <!-- calltracker end -->
 <div id="outer">
   <div id="wrapper">
     <div id="header">
-      <div id="logo"><a href="index.htm"><img src="images/logo.jpg" alt="Impact Media Logo" width="318" height="191" border="0"></a></div>
+      <div id="logo"><a href="/"><img src="images/logo.jpg" alt="Impact Media Logo" width="318" height="191" border="0"></a></div>
       <ul id="nav">
-        <li><a href="index.htm" title="Home"><span><span>Home</span></span></a></li>
+        <li><a href="/" title="Home"><span><span>Home</span></span></a></li>
         <li><a href="search-engine-marketing-services/search-engine-marketing.htm" title="Services"><span><span>Services</span></span></a></li>
         <li><a href="sem-work/our-work.htm" title="Our Work"><span><span>Our Work</span></span></a></li>
         <li><a href="business-partnerships.htm" title="Partners"><span><span>Partners</span></span></a></li>
         <li><a href="search-engine-marketing-jobs/search-engine-marketing-jobs.htm" title="Vacancies"><span><span>Vacancies</span></span></a></li>
         <li><a href="blog/" title="Blog"><span><span>Blog</span></span></a></li>
-        <li><a href="impact-media/impact-media.htm" title="About Us"><span><span>About Us</span></span></a></li>
+        <li><a href="seo-agency.htm" title="About Us"><span><span>About Us</span></span></a></li>
         <li><a href="contact-impact-media/contact-impact-media.php" title="Contact Us"><span><span>Contact Us</span></span></a></li>
       </ul>
     </div>
@@ -59,7 +67,7 @@
           legally bound accordingly</h2>
       </div>
     </div>
-    <div id="crumb" class="crumb"><a href="index.htm">Home</a> / <a href="privacy-policy.htm">Privacy Policy</a><a href="search-engine-marketing-services/search-engine-optimisation.htm"></a></div>
+    <div id="crumb" class="crumb"><a href="/">Home</a> / <a href="privacy-policy.htm">Privacy Policy</a><a href="search-engine-marketing-services/search-engine-optimisation.htm"></a></div>
     <div id="container">
       <div id="sub-column">
         <div class="sub-column-text">
@@ -167,7 +175,7 @@
       52 Botley Road, Park Gate, Southampton, 
       Hampshire, SO31 1BB, UK. <br>
       <br>
-      SEO Company - Portsmouth 12m, <br>
+      <a href="seo-agency.htm">SEO Agency</a> - Portsmouth 12m, <br>
       Bournemouth 40m, London 70m.<br>
       <br>
       <a href="http://validator.w3.org/check/referer" class="footer-link"><img src="images/tick.jpg" alt="Valid XHTML 1.0" width="22" height="12" border="0"></a> <a href="http://validator.w3.org/check/referer">XHTML 1.0</a><br>
@@ -187,13 +195,13 @@
     	<span class="footer-heading">
         	Resources
         </span><br><br>
-      		• <a href="index.htm">Home</a><br>
+      		• <a href="/">Home</a><br>
       		• <a href="contact-impact-media/contact-impact-media.php">Contact Us</a><br>
 			• <a href="impact-media/memberships-and-accreditations.htm">SEO Accreditations</a><br>
       		• <a href="privacy-policy.htm">Privacy Policy</a><br>
       		• <a href="disclaimer.htm">Disclaimer</a><br>
-            • <a href="http://seotools.impactmedialtd.co.uk">SEO Tools</a><br>
-			• <a href="/blog">SEO Blog</a><br>
+            • <a href="http://seotools.impactmedia.co.uk">SEO Tools</a><br>
+			• <a href="/blog/">SEO Blog</a><br>
       		• <a href="sitemap.htm">Sitemap </a><br>
     </div>
   </div>
@@ -220,16 +228,7 @@ pageTracker._trackPageview();
 </script>
 <!-- END GOOGLE ANALYTICS CODE -->
 
-<!-- STAT COUNTER CODE -->
-<script type="text/javascript">
-var sc_project=4194905; 
-var sc_invisible=1; 
-var sc_partition=48; 
-var sc_click_stat=1; 
-var sc_security="40cda4c5"; 
-</script>
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script><noscript><div class="statcounter"><a title="click tracking" class="statcounter" href="http://www.statcounter.com/"><img class="statcounter" src="http://c.statcounter.com/4194905/0/40cda4c5/1/" alt="click tracking" /></a></div></noscript>
-<!-- END STAT COUNTER CODE -->
+
 <!-- REFERRAL CODE -->
 <script type="text/javascript" src="./js/referral.js"></script>
 <!-- END REFERRAL CODE -->
