--- a/i/im/imp/impactmedia.co.uk.html
+++ b/i/im/imp/impactmedia.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the impactmedia.co.uk privacy policy that was archived on 2010-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100605114608id_/http%3A//www.impactmedia.co.uk/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the impactmedia.co.uk privacy policy that was archived on 2010-09-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100910060937id_/http%3A//www.impactmedia.co.uk/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Impact Media Privacy Policy</title>
@@ -13,6 +13,7 @@
 <meta name="ICBM" content="50.873036, -1.267022">
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="http://assets.percentmobile.com/percent_mobile.js" type="text/javascript" charset="utf-8"></script>	
 <!--[if IE 7]>
 		<link rel="stylesheet" type="text/css" media="screen" href="css/ie7.css" />    
 	<![endif]-->
@@ -23,7 +24,14 @@
 <body>
 
 <!-- Calltracker start -->
-<script type="text/javascript" src="http://services.call-tracking.co.uk/WebServices/gwt-www/uk.co.call_tracking.gwt.widgets.ChangeNumberWidget/uk.co.call_tracking.gwt.widgets.ChangeNumberWidget.nocache.js"></script>
+<script type="text/javascript" src="http://services.call-tracking.co.uk/WebServices/gwt-www/uk.co.call_tracking.gwt.widgets.ChangeNumberWidget/uk.co.call_tracking.gwt.widgets.ChangeNumberWidget.nocache.js"></script><script>
+<!--
+percent_mobile_track('296165023507603216755126658307511584212');
+-->
+</script>
+<noscript>
+<img src="http://tracking.percentmobile.com/pixel/296165023507603216755126658307511584212/pixel.gif?v=271009_js" width="2" height="2" alt="" />
+</noscript>
 <div id="numberRender.param" style="display:none;">clientid:245;format:434;cookieExpiry:365;groupId:179</div>
 <!-- calltracker end -->
 <div id="outer">
@@ -37,7 +45,7 @@
         <li><a href="business-partnerships.htm" title="Partners"><span><span>Partners</span></span></a></li>
         <li><a href="search-engine-marketing-jobs/search-engine-marketing-jobs.htm" title="Vacancies"><span><span>Vacancies</span></span></a></li>
         <li><a href="blog/" title="Blog"><span><span>Blog</span></span></a></li>
-        <li><a href="impact-media/impact-media.htm" title="About Us"><span><span>About Us</span></span></a></li>
+        <li><a href="seo-agency.htm" title="About Us"><span><span>About Us</span></span></a></li>
         <li><a href="contact-impact-media/contact-impact-media.php" title="Contact Us"><span><span>Contact Us</span></span></a></li>
       </ul>
     </div>
@@ -167,7 +175,7 @@
       52 Botley Road, Park Gate, Southampton, 
       Hampshire, SO31 1BB, UK. <br>
       <br>
-      SEO Company - Portsmouth 12m, <br>
+      <a href="seo-agency.htm">SEO Agency</a> - Portsmouth 12m, <br>
       Bournemouth 40m, London 70m.<br>
       <br>
       <a href="http://validator.w3.org/check/referer" class="footer-link"><img src="images/tick.jpg" alt="Valid XHTML 1.0" width="22" height="12" border="0"></a> <a href="http://validator.w3.org/check/referer">XHTML 1.0</a><br>
