--- a/h/hu/hud/huddle.net.html
+++ b/h/hu/hud/huddle.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the huddle.net privacy policy that was archived on 2010-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100612014241id_/http%3A//www.huddle.net/about/privacy-statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the huddle.net privacy policy that was archived on 2010-09-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100913010401id_/http%3A//www.huddle.net/about/privacy-statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en"><head>
 <title>
@@ -10,11 +10,6 @@ Huddle
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="Huddle is a network of online workspaces that brings project management software, online collaboration and document sharing together.">
 <meta name="keywords" content="project management software, online collaboration, document sharing, document management">
-<script type="text/javascript">
-		// setting the accept language HTTP header value
-		// in client-side JavaScript from PHP
-		var acceptLanguage = 'en-us,en;q=0.5';
-	</script>
 <!-- START CSS -->
 <link rel="stylesheet" media="screen, projection" type="text/css" href="/css/common.css">
 <link rel="stylesheet" media="screen, projection" type="text/css" href="/css/sections/about.css">
@@ -27,53 +22,55 @@ Huddle
 <!-- END CSS -->
 <!-- START JAVASCRIPT -->
 <script type="text/javascript" src="/js/jquery.js"></script>
-<script type="text/javascript" src="/js/jquery-ui.js"></script>
 <script type="text/javascript" src="/js/common.js"></script>
-<script type="text/javascript" src="/js/global.js"></script>
-<script type="text/javascript" src="/js/helpers.js"></script>
 <script type="text/javascript" src="/js/sections/about.js"></script>
-<!-- END JAVASCRIPT -->
+<script type="text/javascript">
+		// setting the accept language HTTP header value
+		// in client-side JavaScript from PHP
+		var acceptLanguage = '';
+	</script>
 <script type="text/javascript">
 		$u.setLanguageAndCulture();
 	</script>
+<!-- END JAVASCRIPT -->
 <link rel="shortcut icon" href="/favicon.ico">
-<link rel="alternate" type="application/rss+xml" title="Huddle Blog" href="http://blog.huddle.net/rss">
-<link rel="alternate" type="application/rss+xml" title="Huddle Press Releases" href="https://www.huddle.net/rss/?section=press">
+<link rel="alternate" type="application/rss+xml" title="Huddle Blog" href="http://blog.huddle.net/rss/">
+<link rel="alternate" type="application/rss+xml" title="Huddle Press Releases" href="http://www.huddle.net/rss/?section=press">
 <link rel="Home Page" href="/" title="AccessKey: 1, Home Page">
-<link rel="Contact Page" href="/contact" title="AccessKey: 9, Contact Page">
-<link rel="Skip to content" href="#content" title="AccessKey: S, Skip to content">
+<link rel="Contact Page" href="/contact/" title="AccessKey: 9, Contact Page">
+<!--link rel="Skip to content" href="#content/" title="AccessKey: S, Skip to content" /-->
 <script type="text/javascript" async="" src="https://i.kissmetrics.com/i.js"></script><script type="text/javascript" async="" src="https://s3.amazonaws.com/scripts.kissmetrics.com/64bf5d17759eb42274da0dbe91ef831d166837f7.1.js"></script></head>
 <body id="about">
 <script type="text/javascript">var _kmq = _kmq || []; (function(){function _kms(u,d){if(navigator.appName.indexOf("Microsoft")==0 && d)document.write("<scr"+"ipt defer='defer' async='true' src='"+u+"'></scr"+"ipt>");else{var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(s);}}_kms('https://i.kissmetrics.com/i.js');_kms('http'+('https:'==document.location.protocol ? 's://s3.amazonaws.com/' : '://')+'scripts.kissmetrics.com/64bf5d17759eb42274da0dbe91ef831d166837f7.1.js',1);})();</script>
 <div id="frame">
 <div id="masthead">
-<p class="hide"><a href="#content" accesskey="s">Skip to content</a></p>
+<!-- p class="hide"><a href="#content" accesskey="s">Skip to content</a></p -->
 <div class="logo"><a href="/" accesskey="1">Huddle ~ The Worlds Workspace!</a></div>
 <div id="sec-nav">
 <ul>
-<li><a href="http://blog.huddle.net">Blog</a></li>
+<li><a href="http://blog.huddle.net/">Blog</a></li>
 <li><a href="/apps-and-extras/">Apps</a></li>
 <li><a href="/developers/">Developers</a></li>
 <li><a href="http://support.huddle.net/">Support</a></li>
 <li><a href="/about/webinars/"><strong>register for a webinar</strong></a></li>
 <li class="final"><a href="http://my.huddle.net" class="btn btn-small"><span><strong>Login</strong></span></a></li>
 </ul>
-<p class="contact">Call us on [US] <strong>(415) 376 0870</strong> [UK] <strong>+44 (0)8709 772 212</strong> or email <a href="mailto:sales@huddle.net">sales@huddle.net</a></p>
+<p class="contact">Call us on [UK] <strong>+44 08709 772 212</strong> [US] <strong>(415) 376 0870</strong> or email sales@huddle.net</p>
 </div>
 </div>
 <ul id="main-nav">
-<li><a href="/what-is-huddle" id="tab1">What is Huddle?</a></li>
+<li><a href="/what-is-huddle/" id="tab1">What is Huddle?</a></li>
 <li><a href="/take-the-tour/" id="tab2">Take the Tour</a></li>
 <li><a href="/business-solutions/" id="tab4">Business solutions</a></li>
 <li><a href="/about/" id="tab3">About us</a></li>
-<li><a href="/huddle-price-plans/" id="tab5">Pricing &amp; Sign Up</a></li>
+<li><a href="/price-plans/" id="tab5">Pricing &amp; Sign Up</a></li>
 </ul>
 <div id="panel-top"></div>
 <div id="content">
 <div id="cols">
 <div id="col-main">
 <h1>Privacy&nbsp;statement</h1>
-<p>Ninian Solutions Limited trading as Huddle is committed to preserving the privacy of all visitors to huddle.net. Please read the following privacy policy to understand how We use and protect the information that You provide to Us. Please also ensure that You have read and understood Our Terms of Use which You can find <a href="/terms-and-conditions">here</a>. Capitalized terms used in this Privacy Policy are defined in the <a href="/terms-and-conditions">Terms of Use</a>.</p>
+<p>Ninian Solutions Limited trading as Huddle is committed to preserving the privacy of all visitors to huddle.net. Please read the following privacy policy to understand how We use and protect the information that You provide to Us. Please also ensure that You have read and understood Our Terms of Use which You can find <a href="/about/terms-and-conditions/">here</a>. Capitalized terms used in this Privacy Policy are defined in the <a href="/about/terms-and-conditions/">Terms of Use</a>.</p>
 <p><strong>1.Information that we collect from&nbsp;you</strong></p>
 <p>1.1 If You decide to register with and use huddle.net You will be asked to provide certain information about yourself including Your name and contact details. By submitting Your personal information, You consent to the collection, use and transfer of your information in accordance with the terms of this privacy&nbsp;policy.</p>
 <p>1.2 We may also collect information about Your usage of the Website and of the Service, as well as information about You, from emails, phone calls or letters that You send to Us or form information that you post on our Website. We will only use any such information in accordance with the terms of this privacy&nbsp;policy.</p>
@@ -119,39 +116,39 @@ London SE1&nbsp;3TQ</p>
 <h2>About Huddle</h2>
 <ul>
 <li>
-<a href="https://www.huddle.net/about/the-company"><span>The company</span></a>
+<a href="http://www.huddle.net/about/the-company/"><span>The company</span></a>
 </li>
 <li>
-<a href="https://www.huddle.net/about/management-team"><span>Management team</span></a>
+<a href="http://www.huddle.net/about/management-team/"><span>Management team</span></a>
 </li>
 <li>
-<a href="https://www.huddle.net/about/investors"><span>Investors</span></a>
+<a href="http://www.huddle.net/about/investors/"><span>Investors</span></a>
 </li>
 <li>
-<a href="https://www.huddle.net/about/become-a-partner"><span>Become a Partner</span></a>
+<a href="http://www.huddle.net/about/become-a-partner/"><span>Become a Partner</span></a>
 </li>
 <li>
-<a href="https://www.huddle.net/about/careers"><span>Careers</span></a>
+<a href="http://www.huddle.net/about/careers/"><span>Careers</span></a>
 </li>
 <li><a href="/press/"><span>Buzz and media center</span></a></li>
 <li>
-<a href="https://www.huddle.net/about/faq"><span>FAQ</span></a>
+<a href="http://www.huddle.net/about/faq/"><span>FAQ</span></a>
 </li>
 <li>
-<a href="https://www.huddle.net/about/privacy-statement" class="current"><span>Privacy statement</span></a>
+<a href="http://www.huddle.net/about/privacy-statement/" class="current"><span>Privacy statement</span></a>
 </li>
 <li>
-<a href="https://www.huddle.net/about/terms-and-conditions"><span>Terms and conditions</span></a>
+<a href="http://www.huddle.net/about/terms-and-conditions/"><span>Huddle Customer Terms and Conditions</span></a>
 </li>
 <li>
-<a href="https://www.huddle.net/about/security-statement"><span>Security statement</span></a>
+<a href="http://www.huddle.net/about/security-statement/"><span>Security statement</span></a>
 </li>
 </ul>
 </div>
 </div>
 </div>
 <div id="footer">
-<p class="contact">Call us on [US] <strong>(415) 376 0870</strong> [UK] <strong>+44 08709 772 212</strong> or email <a href="mailto:sales@huddle.net">sales@huddle.net</a></p>
+<p class="contact">Call us on [US] <strong>(415) 376 0870</strong> [UK] <strong>+44 08709 772 212</strong> or email sales@huddle.net</p>
 <p class="copyright">Copyright © 2006 - 2010 Ninian Solutions Ltd</p>
 <ul class="footer-links">
 <li class="first">
@@ -160,8 +157,8 @@ London SE1&nbsp;3TQ</p>
 <li><a href="/">Huddle homepage</a></li>
 <li><a href="/about/">About us</a></li>
 <li><a href="/contact/">Contact us</a></li>
-<li><a href="/press/case-studies/">Case studies</a></li>
-<li><a href="/press/">Buzz and media center</a></li>
+<li><a href="/business-solutions/case-studies/">Case studies</a></li>
+<li><a href="/press/">Buzz and media centre</a></li>
 <li><a href="/about/careers/">Careers at Huddle</a></li>
 <li><a href="http://blog.huddle.net/">Blog</a></li>
 <li><a href="http://blog.huddle.net/rss/">RSS feed</a></li>
@@ -172,7 +169,7 @@ London SE1&nbsp;3TQ</p>
 <ul>
 <li><a href="/apps-and-extras/">Huddle Apps</a></li>
 <li><a href="/about/become-a-partner/">Become a partner</a></li>
-<li><a href="/affiliate/">Affiliate program</a></li>
+<li><a href="/affiliate/">Affiliate programme</a></li>
 <li><a href="/about/privacy-statement/">Privacy policy</a></li>
 <li><a href="/about/security-statement/">Data security</a></li>
 <li><a href="/about/terms-and-conditions/">Terms and conditions</a></li>
@@ -207,34 +204,61 @@ London SE1&nbsp;3TQ</p>
 </div>
 <script src="/js/plugins/huddle/jquery.scroller.js" type="text/javascript"></script>
 <script type="text/javascript">
- var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
- var pageTracker = _gat._getTracker("UA-467305-3");pageTracker._initData();pageTracker._trackPageview();
+	var pageTracker = _gat._getTracker("UA-467305-3");pageTracker._initData();pageTracker._trackPageview();
 </script>
-<!-- Send to Friend Form -->
-<div>
-<form id="frmSendToFriend" action="sendToFriend.aspx" method="post" name="frmSendToFriend">
-<div>
-<input type="hidden" id="hidFriendName" name="fn"> <input type="hidden" id="hidFriendEmail" name="fe">
-<input type="hidden" id="hidYourName" name="yn"> <input type="hidden" id="hidYourEmail" name="ye">
-<input type="hidden" id="hidUrl" name="url">
-</div>
-</form>
+<!-- Begin Salesforce Tracking Code, Place immediately before closing </BODY> tag -->
+<script type="text/javascript" src="https://lct.salesforce.com/sfga.js"></script>
+<script type="text/javascript">__sfga();</script>
+<!-- End Salesforce Tracking Code, Place immediately before closing </BODY> tag -->
 <!-- BEGIN: Unica Page Tag -->
 <!-- Copyright 2004-2006 Unica Corporation.  All rights reserved. -->
 <script type="text/javascript" src="/js/ntpagetag.js"></script>
 <noscript>
-<div>
-<img src="http://stats.huddle.net/ntpagetag.gif?js=0" height="1" width="1" alt="">
-</div>
+<div><img src="http://stats.huddle.net/ntpagetag.gif?js=0" height="1" width="1" alt=""></div>
 </noscript>
 <!-- END: Unica Page Tag -->
-<!-- served by: 222984-DR-APP01 -->
-</div>
-<script src="http://stats.pluginseo.com/js" type="text/javascript"></script>
-<script type="text/javascript">pluginseo.init(127650);</script>
-<noscript><p><img alt="Plug in SEO" width="1" height="1" src="http://stats.pluginseo.com/127650ns.gif"></p></noscript>
-<script type="text/javascript" src="http://s3.amazonaws.com/new.cetrk.com/pages/scripts/0009/9325.js"> </script>
+<!-- served by: 222968-WEB01 -->
+
+<!-- SiteCatalyst code version: H.21.
+Copyright 1996-2010 Adobe, Inc. All Rights Reserved
+More info available at http://www.omniture.com -->
+<script language="JavaScript" type="text/javascript" src="/js/s_code.js"></script>
+<script language="JavaScript" type="text/javascript"><!--
+/* You may give each page an identifying name, server, and channel on
+the next lines. */
+s.pageName="about:privacy-statement"
+s.server="222968-WEB01"
+s.channel="www.huddle.net"
+s.pageType=""
+s.prop1="about"
+s.prop2="privacy-statement"
+s.prop3=""
+s.prop4=""
+s.prop5=""
+/* Conversion Variables */
+s.campaign=""
+s.state=""
+s.zip=""
+s.events="event2"
+s.products=""
+s.purchaseID=""
+s.eVar1=""
+s.eVar2=""
+s.eVar3=""
+s.eVar4=""
+s.eVar5=""
+/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
+var s_code=s.t();if(s_code)document.write(s_code)//--></script>
+<script language="JavaScript" type="text/javascript"><!--
+if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
+//--></script><!--/DO NOT REMOVE/-->
+<!-- End SiteCatalyst code version: H.21. -->
+<script type="text/javascript">
+var __ALC_Deployment = 8717;
+document.write(unescape("%3Cscript src='"+document.location.protocol+"//www.activalive.com/app/js/lt.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://www.activalive.com/app/js/lt.js" type="text/javascript"></script>
 
 </body></html>
