--- a/n/na/nan/nanigans.com.html
+++ b/n/na/nan/nanigans.com.html
@@ -1,111 +1,171 @@
-<!--The following is the downloaded HTML source of the nanigans.com privacy policy that was archived on 2005-03-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050306194525id_/http%3A//nanigans.com/guest/page3.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nanigans.com privacy policy that was archived on 2010-09-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100913033358id_/http%3A//api.nanigans.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-<title>Nanigan's Privacy Policy</title>
+<style type="text/css">
+title { color: #3333FF}
+</style>
+<title>Privacy Statement for Nanigans, Inc.</title>
 </head>
+<body>
+<h1 class="title">Privacy Policy</h1>
+<!-- "About Us" section of privacy policy -->
+<h2>About Us</h2>
+<p>This is a privacy policy for Nanigans, Inc..
+Our homepage on the Web is located at <a href="http://www.nanigans.com">
+http://www.nanigans.com</a>.
+The full text of our privacy policy is available on the Web at 
+<a href="http://api.nanigans.com/privacy.html">
+http://api.nanigans.com/privacy.html</a>
+Users may go to <a href="">
+</a> for information on how to opt-in or opt-out of use of their information.
+</p><p>We invite you to contact us if you have questions about this policy.
+You may contact us by mail at the following address:
+</p><pre>Nanigans, Inc.
+110 Chauncy St.
+Boston, MA 02111 
+USA
+</pre>
+<p>You may contact us by e-mail at 
+<a href="mailto:info@nanigans.com">
+info@nanigans.com</a>. 
+<!-- "Privacy Seals" section of privacy policy -->
+</p><h2>Dispute Resolution and Privacy Seals</h2>
+<p>We have no privacy seals or other assurance mechanisms.
+<!-- "Additional information" section of privacy policy -->
+</p><h2>Additional Information</h2>
+<p>
+This policy is valid for 4 weeks from the time that it is loaded by a client.
+</p>
+<!-- "Data Collection" section of privacy policy -->
+<h2>Data Collection</h2>
+<p>P3P policies declare the data they collect in groups (also referred to as "statements").
+This policy contains 2 data groups.
+The data practices of each group will be explained separately.
+</p><hr width="50%" align="center">
+<h3>Group "Basic information"</h3>
+<p>We collect the following information:
+</p><ul>
+<li>Click-stream data</li>
+<li>HTTP protocol elements</li>
+<li>Search terms</li>
+</ul>
+<p>This data will be used for the following purposes:</p>
+<ul>
+<li>Completion and support of the current activity.</li>
+<li>Web site and system administration.</li>
+<li>Research and development.</li>
+</ul>
+<p>This data will be used by ourselves and our agents.
+</p><p>The following explanation is provided for why this data is collected:</p>
+<blockquote>Data collected from all Web users: access logs, and search strings (if entered).</blockquote>
+<hr width="50%" align="center">
+<h3>Group "Cookies"</h3>
+<p>At the user's option, we will collect the following data:
+</p><ul>
+<li>HTTP cookies</li>
+</ul>
+<p>This data will be used for the following purposes:</p>
+<ul>
+<li>Research and development.</li>
+<li>One-time tailoring.</li>
+</ul>
+<p>This data will be used by ourselves and our agents.
+</p><p>The following explanation is provided for why this data is collected:</p>
+<blockquote>Cookies are used to track visitors to our site, 
+so we can better understand what portions of our site best serve you.</blockquote>
+<!-- "Use of Cookies" section of privacy policy -->
+<hr width="50%" align="center">
+<h2>Cookies</h2>
+<p>Cookies are a technology which can be used to provide you with tailored information from a Web site. A cookie is an element of data that a Web site can send to your browser, which may then store it on your system. You can set your browser to notify you when you receive a cookie, giving you the chance to decide whether to accept it.
+</p><p>Our site makes use of cookies.
+Cookies are used for the following purposes:
+</p><ul>
+<li>User targeting
+</li><li>Research and development
+</li></ul>
+<!-- -->
+<hr width="50%" align="center">
+<h2>Opting Out</h2>
+<p>This privacy statement describes Nanigan's potential use of your information, which includes, but is not limited to your IP address, and User Agent. If you do not agree to our potential uses of your personally identifiable information as we have described for you, you are not required to provide that information to us. In addition, you may opt out of receiving advertising from us simply by responding to the opt-out email link provided by Nanigan's (<a href="mailto:myinfo@nanigans.com">myinfo@nanigans.com</a>).
+You also may cancel or correct your personal information at any time. You can do this by e-mailing us at <a href="mailto:myinfo@nanigans.com?Subject=My%20Info">myinfo@nanigans.com</a> with "My Info" in the subject line of the e-mail. We will send you an e-mail to confirm your request. After we receive confirmation from you, we will correct or remove your information from the all active databases..
 
-<body><p><font face="Comic Sans MS" size="4">Nanigan's Guest Services</font></p>
-<p>&nbsp;</p>
-<table bordercolor="#ffffff" width="100%" border="1">
-  <tbody>
-    <tr>
-      <td bordercolor="#c0c0c0" align="center" width="22%" bgcolor="#ffffec"><font face="Georgia" size="3"><a href="http://nanigans.com/guest/">Contact
-        Us</a></font></td>
-      <td width="78%" rowspan="8">
-        <p align="center"><font face="Georgia" color="#ff0000"><b>Privacy Policy</b></font></p>
-        <p align="center"><font face="Georgia" size="2"><b><font color="#000080">Information
-        Sharing and Disclosure<br>
-        <br>
-        Nanigans.com</font></b> does not rent, sell, or share personal
-        information about you with other people or companies.<br>
-        <br>
-        Nanigans.com will respond to subpoenas, court orders, or legal process,
-        or to establish or exercise our legal rights ordefend against legal
-        claims; We believe it is necessary to share information in order to
-        investigate, prevent, or take action regarding illegal activities,
-        suspected fraud, situations involving potential threats to the physical
-        safety of any person, violations of Nanigans.com terms of use, or as
-        otherwise required by law.<br>
-        <br>
-        Nanigans.com does not provide any personal information to the advertiser
-        when you interact with or view a targeted ad. However, by interacting
-        with or viewing an ad you are consenting to the possibility that the
-        advertiser will make the assumption that you meet the targeting criteria
-        used to display the ad.<br>
-        <br>
-        <br>
-        <b>Children<br>
-        </b><br>
-        <b>Nanigans is not intended for people under 18.&nbsp; Some content is
-        not appropriate for them. <font color="#FF0000">Parent supervision is
-        strongly suggested!</font></b></font></p>
-        <p align="center"><font face="Georgia" size="2">When a child under age 18
-        attempts to register with Nanigans.com, we ask that he or she have a
-        parent or guardian sign and return a statement approving Nanigans.com.<br>
-        <br>
-        Nanigans.com will not contact children under age 18, their parents must
-        provide contact information.<br>
-        <br>
-        Nanigans.com does not ask a child under age 18 for more personal
-        information, as a condition of participation, than is reasonably
-        necessary to participate in a given activities.<br>
-        <br>
-        <b>Changes to this Privacy Policy<br>
-        </b><br>
-        Nanigans.com may update this policy. We will notify you about
-        significant changes in the way we treat<br>
-        </font></p>
-        <p align="center">&nbsp;</p></td>
-    </tr>
-    <tr>
-      <td bordercolor="#c0c0c0" align="center" width="22%" bgcolor="#ffffec"><font face="Georgia" size="3"><a href="http://nanigans.com/guest/page2.html">Terms
-        Of Service</a></font></td>
-    </tr>
-    <tr>
-      <td bordercolor="#c0c0c0" align="center" width="22%" bgcolor="#ffffec"><font face="Georgia" size="3"><a href="http://nanigans.com/guest/page3.html">Privacy
-        Policy</a></font></td>
-    </tr>
-    <tr>
-      <td bordercolor="#c0c0c0" align="center" width="22%" bgcolor="#ffffec"><font face="Georgia" size="3"><a href="http://nanigans.com/guest/page4.html">Spam
-        Policy</a></font></td>
-    </tr>
-    <tr>
-      <td bordercolor="#FFFFFF" align="center" width="22%" bgcolor="#FFFFFF">&nbsp;</td>
-    </tr>
-    <tr>
-      <td bordercolor="#FFFFFF" align="center" width="22%" bgcolor="#FFFFFF">&nbsp;</td>
-    </tr>
-    <tr>
-      <td align="middle" width="22%">
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-      </td>
-    </tr>
-    <tr>
-      <td align="middle" width="22%">&nbsp;</td>
-    </tr>
-  </tbody>
-</table>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
-<p align="center"><font face="Georgia" size="2">Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Member Services&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; News &amp;
-Calendar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Help&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Contact Us</font></p>
-<p align="center">&nbsp;
-</p><p align="center"></p><center><font face="Georgia" size="1">Contact Us with
-questions or comments about this web site.<br>
-All rights reserved. Copyright © 2004</font><font face="Arial" size="1"><br>
-</font></center></body></html>
+If you would like more information about this practice and to know your choices please visit
+
+<a href="http://www.networkadvertising.org/managing/opt_out.asp">http://www.networkadvertising.org/managing/opt_out.asp</a>
+<!-- "Compact Policy Explanation" section of privacy policy -->
+</p><hr width="50%" align="center">
+<h2>Compact Policy Summary</h2>
+<p>The compact policy which corresponds to this policy is:
+</p><pre>    CP="NOI CURa ADMa DEVa TAIa OUR BUS IND UNI COM NAV INT"
+</pre>
+<p>The following table explains the meaning of each field in the compact policy.
+</p><center><table width="80%" border="1" cols="2">
+<tbody><tr><td align="center" valign="top" width="20%"><b>Field</b></td><td align="center" valign="top" width="80%"><b>Meaning</b></td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>CP=</tt></td>
+<td align="left" valign="top" width="80%">This is the compact policy header; it indicates that what follows is a P3P compact policy.</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>NOI</tt></td>
+<td align="left" valign="top" width="80%">
+No identifiable information is collected, so no access is possible.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>CURa</tt></td>
+<td align="left" valign="top" width="80%">
+The data is used for completion of the current activity.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>ADMa</tt></td>
+<td align="left" valign="top" width="80%">
+The data is used for site administration.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>DEVa</tt></td>
+<td align="left" valign="top" width="80%">
+The data is used for research and development.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>TAIa</tt></td>
+<td align="left" valign="top" width="80%">
+The data is used for tailoring the site.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>OUR</tt></td>
+<td align="left" valign="top" width="80%">
+The data is given to ourselves and our agents.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>BUS</tt></td>
+<td align="left" valign="top" width="80%">
+Our business practices specify how long the data will be kept.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>IND</tt></td>
+<td align="left" valign="top" width="80%">
+The data will be kept indefinitely.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>UNI</tt></td>
+<td align="left" valign="top" width="80%">
+Unique identifiers are collected.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>COM</tt></td>
+<td align="left" valign="top" width="80%">
+Computer information is collected.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>NAV</tt></td>
+<td align="left" valign="top" width="80%">
+Navigation and clickstream data is collected.
+</td></tr>
+<tr><td align="left" valign="top" width="20%"><tt>INT</tt></td>
+<td align="left" valign="top" width="80%">
+Interactive data is collected.
+</td>
+</tr>
+</tbody></table></center>
+
+<p>The compact policy is sent by the Web server along with the cookies it describes.
+For more information, see the P3P deployment guide at <a href="http://www.w3.org/TR/p3pdeployment">http://www.w3.org/TR/p3pdeployment</a>.
+<!-- "Policy Evaluation" section of privacy policy -->
+</p><hr width="50%" align="center">
+<h2>Policy Evaluation</h2>
+<p>Microsoft Internet Explorer 6 will evaluate this policy's compact policy whenever it is used with a cookie.
+The actions IE will take depend on what privacy level the user has selected in their browser (Low, Medium, Medium High, or High; the default is Medium.
+In addition, IE will examine whether the cookie's policy is considered satisfactory or unsatisfactory, whether the cookie is a session cookie or a persistent cookie, and whether the cookie is used in a first-party or third-party context.
+This section will attempt to evaluate this policy's compact policy against Microsoft's stated behavior for IE6.
+</p><p><b>Note:</b> this evaluation is currently experimental and should not be considered a substitute for testing with a real Web browser.
+</p><p><b>Satisfactory policy</b>: this compact policy is considered <em>satisfactory</em> according to the rules defined by Internet Explorer 6.
+IE6 will accept cookies accompanied by this policy under the High, Medium High, Medium, Low, and Accept All Cookies settings.
+
+</p></body></html>
