cacert.org (archived on 2010-09-14)
{
  "alexa_rank": 126649,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3509,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.01,
  "homepage_snapshot_redirected_domain": "cacert.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100730135531id_/http://www.cacert.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100730135531id_/http%3A//cacert.org",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "cacert.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100914172039id_/http%3A//www.cacert.org/index.php%3Fid%3D10",
  "policy_title": "CAcert.org'a hogeldiniz",
  "policy_url": "cacert.org/index.php?id=10",
  "sha1": "da5c4f55b75b3488f20fab722ead8d1451487d4c",
  "simhash": 17837698449835872616,
  "simhash_updated": true,
  "site_hostname": "cacert.org",
  "site_url": "http://cacert.org",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20100914172039",
  "word_count": 583,
  "year": 2010
}

--- a/c/ca/cac/cacert.org.html
+++ b/c/ca/cac/cacert.org.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the cacert.org privacy policy that was archived on 2009-11-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103003141id_/http%3A//www.cacert.org/index.php%3Fid%3D10) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cacert.org privacy policy that was archived on 2010-09-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100914172039id_/http%3A//www.cacert.org/index.php%3Fid%3D10) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
-<title>Welcome to CAcert.org</title>
+<title>CAcert.org'a hogeldiniz</title>
 <link rel="stylesheet" href="/styles/default.css" type="text/css">
 <link href="http://blog.CAcert.org/feed/" rel="alternate" type="application/rss+xml" title="rss">
 <script language="JavaScript" type="text/javascript">
@@ -47,27 +47,25 @@ google_color_border = "FFFFFF";
   </div>
   <div id="pageNav">
     <div class="relatedLinks">
-      <h3>Join CAcert.org</h3>
-            <a href="https://www.cacert.org/index.php?id=1">Join</a>
+      <h3>CAcert.org üyesi Ol</h3>
+            <a href="https://www.cacert.org/index.php?id=1">ye Ol</a>
             <a href="/policy/CAcertCommunityAgreement.php">Community Agreement</a>
-      <a href="index.php?id=3">Root Certificate</a>
+      <a href="/index.php?id=3">Kk Sertifikas</a>
     </div>
         <div class="relatedLinks">
-      <h3 class="pointer">My Account</h3>
+      <h3 class="pointer">Hesab</h3>
       <a href="https://www.cacert.org/index.php?id=4">Password Login</a> 
-      <a href="https://www.cacert.org/index.php?id=5">Lost Password</a>
+      <a href="https://www.cacert.org/index.php?id=5">Kaybedilen Parola</a>
       <a href="https://www.cacert.org/index.php?id=4&amp;noauto=1">Net Cafe Login</a> 
       <a href="https://secure.cacert.org/index.php?id=4">Certificate Login</a>
     </div>
             <div class="relatedLinks">
-      <h3 class="pointer" onclick="explode('misc')">+ About CAcert.org</h3>
+      <h3 class="pointer" onclick="explode('misc')">+ CAcert.org Hakkýnda</h3>
       <ul class="menu" id="misc" style="display: none;">
         <li><a href="http://blog.cacert.org/">CAcert News</a></li>
-	<li><a href="/help.php">Howto Information</a></li>
 	<li><a href="http://wiki.CAcert.org/">Wiki Documentation</a></li>
 	<li><a href="/policy/">Policies</a></li>
 	<li><a href="/index.php?id=19">Point System</a></li>
-	<li><a href="/policy/NRPDisclaimerAndLicence.php" target="_blank">Disclaimer</a></li>
 	<li><a href="http://bugs.CAcert.org/">Bug Database</a></li>
 	<li><a href="/stats.php">CAcert Statistics</a></li> 	<li><a href="http://blog.CAcert.org/feed/">RSS News Feed</a></li>
 	<li><a href="/index.php?id=8">CAcert Board</a></li>
@@ -77,17 +75,17 @@ google_color_border = "FFFFFF";
     </div>
 
     <div class="relatedLinks">
-      <h3 class="pointer" onclick="explode('trans')">+ Translations</h3>
+      <h3 class="pointer" onclick="explode('trans')">+ Tercümeler</h3>
       <ul class="menu" id="trans" style="display: none;"><li><a href="/index.php?id=10&amp;lang=ar_JO">العربية</a></li><li><a href="/index.php?id=10&amp;lang=bg_BG">Български</a></li><li><a href="/index.php?id=10&amp;lang=cs_CZ">Čeština</a></li><li><a href="/index.php?id=10&amp;lang=da_DK">Dansk</a></li><li><a href="/index.php?id=10&amp;lang=de_DE">Deutsch</a></li><li><a href="/index.php?id=10&amp;lang=el_GR">Ελληνικά</a></li><li><a href="/index.php?id=10&amp;lang=en_AU">English</a></li><li><a href="/index.php?id=10&amp;lang=eo_EO">Esperanto</a></li><li><a href="/index.php?id=10&amp;lang=es_ES">Español</a></li><li><a href="/index.php?id=10&amp;lang=fa_IR">Farsi</a></li><li><a href="/index.php?id=10&amp;lang=fi_FI">Suomi</a></li><li><a href="/index.php?id=10&amp;lang=fr_FR">Français</a></li><li><a href="/index.php?id=10&amp;lang=he_IL">עברית</a></li><li><a href="/index.php?id=10&amp;lang=hr_HR">Hrvatski</a></li><li><a href="/index.php?id=10&amp;lang=hu_HU">Magyar</a></li><li><a href="/index.php?id=10&amp;lang=is_IS">Íslenska</a></li><li><a href="/index.php?id=10&amp;lang=it_IT">Italiano</a></li><li><a href="/index.php?id=10&amp;lang=ja_JP">日本語</a></li><li><a href="/index.php?id=10&amp;lang=ka_GE">Georgian</a></li><li><a href="/index.php?id=10&amp;lang=nl_NL">Nederlands</a></li><li><a href="/index.php?id=10&amp;lang=pl_PL">Polski</a></li><li><a href="/index.php?id=10&amp;lang=pt_PT">Português</a></li><li><a href="/index.php?id=10&amp;lang=pt_BR">Português Brasileiro</a></li><li><a href="/index.php?id=10&amp;lang=ru_RU">Русский</a></li><li><a href="/index.php?id=10&amp;lang=ro_RO">Română</a></li><li><a href="/index.php?id=10&amp;lang=sv_SE">Svenska</a></li><li><a href="/index.php?id=10&amp;lang=tr_TR">Türkçe</a></li><li><a href="/index.php?id=10&amp;lang=zh_CN">中文(简体)</a></li></ul>
     </div>
         <div class="relatedLinks">
       <h3 class="pointer" onclick="explode('recom')">Advertising</h3>
-      <ul class="menu" id="recom"><li><a href="http://www.e-merch.com" target="_blank">Werbeartikel</a></li><li><a href="http://www.dentaltrade-zahnersatz.de" target="_blank">Günstiger Zahnersatz</a></li><li><a href="http://www.lola-de.com" target="_blank">Hängematten</a></li><li><a href="http://www.eastwest-trading.de" target="_blank">Blumentrog</a></li><li><a href="http://www.abc-tresore.de" target="_blank">Tresore</a></li></ul>
+      <ul class="menu" id="recom"><li><a href="http://www.dentaltrade-zahnersatz.de/" target="_blank">Zahnersatz günstig</a></li><li><a href="http://www.skylime.net" target="_blank">SkyLime - Network Solutions</a></li></ul>
     </div>
       </div>
   <div id="content">
     <div class="story">
-<h3>Privacy Policy</h3>
+<h3>Gizlilik Politikas</h3>
 
 <p>
 This policy discloses what information we gather about you when you visit any of our Web site, and when you issue or use our certificates. It describes how we use that information and how you can control it.</p>
@@ -96,17 +94,17 @@ This policy discloses what information we gather about you when you visit any of
 <p>
 We collect two kinds of information about website users: 1) data that users volunteer by signing up to our website or when you send us an email via our contact form; and 2) aggregated tracking data we collect when users interact with our site.</p>
 
-<h4>2. Personal information</h4>
+<h4>2. Kiisel bilgi</h4>
 <p>
 When you post to the contact form, you must provide your name and email address. When you sign up to the website, you must provide your name, email address, date of birth and some lost pass phrase question and answers.</p>
 <p>
 We only share your information with any other organisation when so instructed by a CAcert arbitrator.</p>
 
-<h4>3. Aggregated tracking information</h4>
+<h4>3. Kmelenmi izleme bilgisi</h4>
 <p>
 We analyse visitors' use of our sites by tracking information such as page views, traffic flow, search terms, and click through. We use this information to improve our sites. We also share this anonymous traffic and demographic information in aggregate form with advertisers and other business partners. We do not share any information with advertisers that can identify an individual user.</p>
 
-<h4>4. Cookies</h4>
+<h4>4. Cookie'ler</h4>
 <p>
 Some of our advertisers use a third-party ad server to display ads. These ads may contain cookies. The ad server receives these cookies, and we don't have access to them.</p>
 <p>
@@ -116,7 +114,7 @@ We don't use cookies to store personal information, we do use sessions, and if c
 <p>
 If we change our Privacy Policy, we will post those changes on www.CAcert.org. If we decide to use personally identifiable information in a manner different from that stated at the time it was collected, we will notify users via email. Users will be able to opt out of any new use of their personal information.</p>
 
-<h4>6. How to update, correct, or delete your information</h4>
+<h4>6. Nasl bilginizi gnceller, dzeltir ve silersiniz</h4>
 <p>
 You are able to update, add and remove your information at any time via our web interface, log into the 'My Account' and then click on the 'My Details' section, and then click the relevant link</p>
 
@@ -137,7 +135,7 @@ A CAcert arbitrator may override this policy in a dispute.To obtain access to co
 CAcert adopts the Australian privacy regulations.Please see <a href="http://www.privacy.gov.au/">http://www.privacy.gov.au/</a> for further details.Governmental warrants and civil supoenas will be processed through the dispute resolution system, which ensures that valid authority is given to whoever complies with the supoena or the warrant.</p>
 
 
-<p>If you need to contact us in writing, address your mail to:</p>
+<p>Eğer bize yazılı olarak kontak kurmak isterseniz, mektubuzu şu adrese gönderiniz:</p>
 <p>
 CAcert Inc.<br>
 P.O. Box 4107<br>
@@ -155,16 +153,16 @@ Australia
 
   <div id="siteInfo">
 <!--ONESTAT SCRIPTCODE START-->
-<script type="text/javascript" src="onestat.js"></script><a href="http://www.onestat.com/asp/login.asp?sid=164863" target="_blank"><img id="ONESTAT_TAG" border="0" src="https://stat.onestat.com/asp/stat.asp?tagver=1&amp;sid=164863&amp;tz=0&amp;ch=18&amp;ti=Welcome%20to%20CAcert.org&amp;url=https%3A//web.archive.org/web/20091103003141id_/http%253A//www.cacert.org/index.php%253Fid%253D10&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No&amp;section=&amp;custom=" alt="This Site Tracked by OneStat.com"></a>
+<script type="text/javascript" src="onestat.js"></script><a href="http://www.onestat.com/asp/login.asp?sid=164863" target="_blank"><img id="ONESTAT_TAG" border="0" src="https://stat.onestat.com/asp/stat.asp?tagver=1&amp;sid=164863&amp;tz=0&amp;ch=18&amp;ti=CAcert.org%27a%20hogeldiniz&amp;url=https%3A//web.archive.org/web/20100914172039id_/http%253A//www.cacert.org/index.php%253Fid%253D10&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No&amp;section=&amp;custom=" alt="This Site Tracked by OneStat.com"></a>
 <noscript>
 <a href="http://www.onestat.com/asp/login.asp?sid=164863">
 <img src="http://stat.onestat.com/asp/stat.asp?tagver=1&amp;sid=164863&amp;js=no&amp;" alt="this site tracked by onestat.com" />
 </a>
 </noscript>
-<!--ONESTAT SCRIPTCODE END-->	<a href="index.php?id=12">About Us</a> | <a href="index.php?id=13">Donations</a> | <a href="http://wiki.cacert.org/wiki/CAcertIncorporated">Association Membership</a> |
-        <a href="index.php?id=10">Privacy Policy</a> |
-        <a href="index.php?id=51">Mission Statement</a> | <a href="index.php?id=11">Contact Us</a> |
-	©2002-2009 by CAcert</div>
+<!--ONESTAT SCRIPTCODE END-->	<a href="/index.php?id=12">Hakkm</a> | <a href="/index.php?id=13">Ba</a> | <a href="http://wiki.cacert.org/wiki/CAcertIncorporated">Association Membership</a> |
+        <a href="/index.php?id=10">Gizlilik Politikas</a> |
+        <a href="/index.php?id=51">Mission Statement</a> | <a href="/index.php?id=11">Bize Ula</a> |
+	©2002-2010 by CAcert</div>
 </div>  
              
 </body></html>
