--- a/r/re/rea/realbiz360.com.html
+++ b/r/re/rea/realbiz360.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realbiz360.com privacy policy that was archived on 2010-05-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100518072202id_/http%3A//www.realbiz360.com/footer/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realbiz360.com privacy policy that was archived on 2010-09-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100916231045id_/http%3A//www.realbiz360.com/footer/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>RealBiz360 Virtual Tour Web Marketing - Privacy Policy</title>
@@ -7,7 +7,7 @@
 <meta name="description" content="Real Biz LLC Privacy Policy">
 <meta name="keywords" content="virtual tour, agents, brokers, real estate, 360x360, IPIX, hemispheres">
 <link rel="stylesheet" type="text/css" href="css/css.php-id=301.css">
-<script language="javascript" type="text/javascript" src="js/AC_RunActiveContent.js"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="javascript" type="text/javascript" src="js/AC_RunActiveContent.js"></script>
 <script language="javascript" type="text/javascript" src="js/IE8.js"></script>
 <script language="javascript" type="text/javascript" src="js/rollover.php-id=1" tppabs="http://www.realbiz360.com/js/rollover.php?id=1"></script>
 <script language="javascript" type="text/javascript" src="js/util.js"></script>
@@ -26,6 +26,19 @@ a:active {
 COLOR: #000000;
 }
 </style> 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-17027504-1']);
+  _gaq.push(['_setDomainName', '.realbiz360.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </head>
 <body bgcolor="#1E1C1A" cellpadding="0" cellspacing="0" marginwidth="0" marginheight="0">
 <table border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="width: 788px" class="style2">
@@ -155,7 +168,7 @@ COLOR: #000000;
   <tr>
     <td class="fnav"><table width="740" border="0" align="center" cellpadding="0" cellspacing="0">
       <tbody><tr>
-        <td class="copyright">©2004-2009 RealBiz360 Inc. All rights reserved.</td>
+        <td class="copyright">©2004-2010 RealBiz360 Inc. All rights reserved.</td>
         <td class="footer"><table border="0" cellpadding="0" cellspacing="0" align="right">
 <tbody><tr>
 <td id="footer_privacy_n" class="footer_n" onmouseover="this.className='footer_r';" onmouseout="this.className='footer_n';">Privacy Policy</td>
@@ -170,10 +183,5 @@ COLOR: #000000;
     <td><img src="images/navigation/int_footwhite.bmp" width="815" height="25" border="0"></td>
   </tr>
 </tbody></table>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<script type="text/javascript">
-_uacct = "UA-709309-1";
-urchinTracker();
-</script>
 
 </body></html>
